--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table cellspacing="20">
 <tr>
 <td>
-<img src="C:/Users/y3ur/Desktop/WorkOuts/download.jpg" alt="Herish Surendran Profile Picture" height="150px" width="150px" style="border-radius: 50%;">
+<img src="download.jpg" alt="Herish Surendran Profile Picture" height="150px" width="150px" style="border-radius: 50%;">
 </td>
 <td>
 <h1>Herish Surendran</h1>
